--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "0.19.0",
+    "axios-observable": "1.1.1",
     "chalk": "2.4.2",
     "cheerio": "1.0.0-rc.3",
     "color-json": "2.0.0",
@@ -19,6 +20,7 @@
     "currency.js": "1.2.2",
     "node-craigslist": "2.0.0",
     "query-string": "6.7.0",
+    "rxjs": "6.5.2",
     "slice-ansi": "2.1.0",
     "wrap-ansi": "6.0.0"
   }
